--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
     <p>This is new local repo</p>
-    <p>This is new feature for feature1</p>
+    <p>This is new feature for feature1(dropdown)</p>
 </html>
